# summarizer

./: .gitlab-ci.yml  Dockerfile  README.md  main.py  pyproject.toml  unic.yaml
src/: config.py  general.py  gpt.py  logger.py  stats_pusher.py  time_client.py  time_messages_handler.py  time_requests.py
