[project]
name = "summarizer"
version = "0.1.0"
description = ""
authors = [
    {name = "Roman Ovsyannikov",email = "ro.ovsyannikov@tbank.ru"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "time-messenger (>=1.0.0,<2.0.0)",
    "aiohttp (>=3.12.6,<4.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "starlette (>=0.47.0,<0.48.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "prometheus-client (>=0.22.1,<0.23.0)",
    "langchain-core (>=0.3.0,<2.0.0)",
    "langchain-openai (>=0.3.0,<2.0.0)",
    "httpx (>=0.27.0,<1.0.0)"
]

[[tool.poetry.source]]
name = "inside-pkg"
url = "https://artifactory.tcsbank.ru/artifactory/api/pypi/python-all/simple/"
priority = "primary"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
